--- a/QT-UI/mainwindow.ui
+++ b/QT-UI/mainwindow.ui
@@ -48,7 +48,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>192.168.221.162</string>
+     <string>192.168.221.</string>
     </property>
    </widget>
    <widget class="QPushButton" name="ButtonTestConnect">
@@ -515,9 +515,9 @@
      <enum>QSlider::TicksBothSides</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="ButtonSTOP">
+   <widget class="QPushButton" name="ButtonSendALL">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
@@ -531,7 +531,6 @@
      <font>
       <family>微软雅黑</family>
       <pointsize>20</pointsize>
-      <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
@@ -539,7 +538,7 @@
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
-     <string>紧急中断</string>
+     <string>一键应用</string>
     </property>
     <property name="flat">
      <bool>false</bool>
@@ -612,7 +611,7 @@
      </font>
     </property>
     <property name="text">
-     <string>v0.1 Alpha Designed by：RoyZ</string>
+     <string>v0.2 Beta Designed by：RoyZ</string>
     </property>
    </widget>
    <widget class="QPushButton" name="ButtonSend5">
