--- a/QT-UI/mainwindow.ui
+++ b/QT-UI/mainwindow.ui
@@ -76,6 +76,9 @@
     <property name="maximum">
      <number>180</number>
     </property>
+    <property name="value">
+     <number>90</number>
+    </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
@@ -124,6 +127,9 @@
     <property name="maximum">
      <number>180</number>
     </property>
+    <property name="value">
+     <number>90</number>
+    </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
@@ -142,6 +148,9 @@
     </property>
     <property name="maximum">
      <number>180</number>
+    </property>
+    <property name="value">
+     <number>90</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -198,6 +207,9 @@
     </property>
     <property name="singleStep">
      <double>0.100000000000000</double>
+    </property>
+    <property name="value">
+     <double>90.000000000000000</double>
     </property>
    </widget>
    <widget class="QPushButton" name="ButtonSend1">
@@ -293,6 +305,9 @@
     <property name="singleStep">
      <double>0.100000000000000</double>
     </property>
+    <property name="value">
+     <double>90.000000000000000</double>
+    </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
@@ -363,7 +378,7 @@
      <string>机械臂控制中心</string>
     </property>
     <property name="textFormat">
-     <enum>Qt::PlainText</enum>
+     <enum>Qt::RichText</enum>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -418,6 +433,9 @@
     <property name="singleStep">
      <double>0.100000000000000</double>
     </property>
+    <property name="value">
+     <double>90.000000000000000</double>
+    </property>
    </widget>
    <widget class="QDoubleSpinBox" name="spinBox5">
     <property name="geometry">
@@ -433,6 +451,9 @@
     </property>
     <property name="singleStep">
      <double>0.100000000000000</double>
+    </property>
+    <property name="value">
+     <double>90.000000000000000</double>
     </property>
    </widget>
    <widget class="QLineEdit" name="LineEditPORT">
@@ -476,6 +497,9 @@
     <property name="singleStep">
      <double>0.100000000000000</double>
     </property>
+    <property name="value">
+     <double>90.000000000000000</double>
+    </property>
    </widget>
    <widget class="QSlider" name="slider1">
     <property name="geometry">
@@ -488,6 +512,9 @@
     </property>
     <property name="maximum">
      <number>180</number>
+    </property>
+    <property name="value">
+     <number>90</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -507,6 +534,9 @@
     </property>
     <property name="maximum">
      <number>180</number>
+    </property>
+    <property name="value">
+     <number>90</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -575,6 +605,9 @@
     <property name="singleStep">
      <double>0.100000000000000</double>
     </property>
+    <property name="value">
+     <double>90.000000000000000</double>
+    </property>
    </widget>
    <widget class="QSlider" name="slider5">
     <property name="geometry">
@@ -587,6 +620,9 @@
     </property>
     <property name="maximum">
      <number>180</number>
+    </property>
+    <property name="value">
+     <number>90</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -638,6 +674,31 @@
     </property>
     <property name="text">
      <string>QUIT!</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>110</y>
+      <width>471</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Futura ICG</family>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Robot ARM Contol Center</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::RichText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
